<resources>
    <string name="app_name">Japan 2 You</string>
    <string name="description">Japan2You is a Lorem ipsum dolor sit amet, consectetur adipiscing elit. Morbi convallis dignissim molestie. Proin eros augue, viverra nec auctor ac, dictum nec lectus. Nullam mattis dolor neque, sit amet tempor massa luctus at. Duis nec orci pulvinar odio dapibus euismod. Nam aliquam tincidunt nisi quis consectetur. Orci varius natoque penatibus et magnis dis parturient montes, nascetur ridiculus mus. Praesent non odio in nisl accumsan aliquet. Vestibulum pellentesque finibus vestibulum.</string>
    <string name="address">"1234 Okinawa Way\nLos Angeles, MA 98765"</string>
    <string name="website">www.japan2youtravel.net</string>
    <string name="company_name">Japan2You Travel</string>
    <string name="phone_number">(954) 123-4567</string>
    <string name="phone_label">phone</string>
    <string name="web_label">web</string>
    <string name="address_label">address</string>
    <string name="about_us_label">About Us</string>
    <string name="header_picture_content_description">This is the center picture in the app to showcase a traveling site to Japan.</string>
    <string name="logo_picture_content_description">This is the Japan2You logo that represents the company name.</string>
</resources>
